--- a/Pragyan/FinTech/client/src/index.css
+++ b/Pragyan/FinTech/client/src/index.css
@@ -1,1 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Sixtyfour&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sixtyfour&display=swap');
 @import "tailwindcss";
+
+body{
+    font-family: 'Roboto';
+}
